// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tts-frontend snapshot regression > diagnostic symbol: "/b/" 1`] = `
[
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 100,
      "B2": 100,
      "B3": 100,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 500,
      "F2": 1500,
      "F3": 2500,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "time": 0,
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 47,
      "AVS": -70,
      "B1": 300,
      "B2": 110,
      "B3": 130,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 101.85185185185185,
      "F1": 200,
      "F2": 1200,
      "F3": 2400,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "B_CL",
    "time": 0,
    "word": "b",
  },
  {
    "params": {
      "A1": 60,
      "A10": 30,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 38,
      "A8": 42,
      "A9": 38,
      "AB": 63,
      "AF": 42,
      "AH": 0,
      "AN": 0,
      "AV": 47,
      "AVS": -70,
      "B1": 60,
      "B2": 110,
      "B3": 130,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 100,
      "F1": 280,
      "F2": 1200,
      "F3": 2150,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 1,
      "lfMode": 1,
    },
    "phoneme": "B_REL",
    "time": 0.049,
    "word": "b",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 100,
      "B2": 100,
      "B3": 100,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 500,
      "F2": 1500,
      "F3": 2500,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "SIL",
    "time": 0.154,
  },
]
`;

exports[`tts-frontend snapshot regression > multi-word sentence: "the quick brown fox." 1`] = `
[
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 100,
      "B2": 100,
      "B3": 100,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 500,
      "F2": 1500,
      "F3": 2500,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "time": 0,
  },
  {
    "params": {
      "A1": 0,
      "A10": 34,
      "A2": 0,
      "A3": 32,
      "A4": 36,
      "A5": 38,
      "A6": 48,
      "A7": 42,
      "A8": 46,
      "A9": 42,
      "AB": 48,
      "AF": 44,
      "AH": 0,
      "AN": 0,
      "AV": 47,
      "AVS": 47,
      "B1": 60,
      "B2": 80,
      "B3": 170,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 120,
      "F1": 270,
      "F2": 1290,
      "F3": 2540,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 1,
      "lfMode": 1,
    },
    "phoneme": "DH",
    "time": 0,
    "word": "the",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 57,
      "AVS": -70,
      "B1": 85,
      "B2": 60,
      "B3": 160,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 119,
      "F1": 584,
      "F2": 1344,
      "F3": 2580,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "AH",
    "time": 0.07,
    "word": "the",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 300,
      "B2": 100,
      "B3": 150,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 200,
      "F2": 1500,
      "F3": 2800,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "K_CL",
    "time": 0.092,
    "word": "quick",
  },
  {
    "params": {
      "A1": 0,
      "A10": 15,
      "A2": 0,
      "A3": 53,
      "A4": 43,
      "A5": 45,
      "A6": 45,
      "A7": 35,
      "A8": 28,
      "A9": 22,
      "AB": 0,
      "AF": 55,
      "AH": 53,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 250,
      "B2": 160,
      "B3": 330,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 280,
      "F2": 1500,
      "F3": 2850,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 1,
      "lfMode": 1,
    },
    "phoneme": "K_REL",
    "time": 0.157,
    "word": "quick",
  },
  {
    "params": {
      "A1": 0,
      "A10": 15,
      "A2": 0,
      "A3": 53,
      "A4": 43,
      "A5": 45,
      "A6": 45,
      "A7": 35,
      "A8": 28,
      "A9": 22,
      "AB": 0,
      "AF": 0,
      "AH": 53,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 200,
      "B2": 160,
      "B3": 330,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 300,
      "F2": 1990,
      "F3": 2850,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "K_ASP",
    "time": 0.182,
    "word": "quick",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 59,
      "AVS": -70,
      "B1": 50,
      "B2": 80,
      "B3": 60,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 115,
      "F1": 290,
      "F2": 610,
      "F3": 2150,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "W",
    "time": 0.22999999999999998,
    "word": "quick",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 59,
      "AVS": -70,
      "B1": 50,
      "B2": 87,
      "B3": 88,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 115.58536585365853,
      "F1": 328.5,
      "F2": 1026.5,
      "F3": 2297,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "W",
    "time": 0.267,
    "word": "quick",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 62,
      "AVS": -70,
      "B1": 50,
      "B2": 100,
      "B3": 140,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 114,
      "F1": 400,
      "F2": 1800,
      "F3": 2570,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "IH",
    "time": 0.297,
    "word": "quick",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 300,
      "B2": 100,
      "B3": 150,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 200,
      "F2": 1500,
      "F3": 2800,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "K_CL",
    "time": 0.377,
    "word": "quick",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 47,
      "AVS": -70,
      "B1": 300,
      "B2": 110,
      "B3": 130,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 112,
      "F1": 200,
      "F2": 1200,
      "F3": 2400,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "B_CL",
    "time": 0.432,
    "word": "brown",
  },
  {
    "params": {
      "A1": 60,
      "A10": 30,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 38,
      "A8": 42,
      "A9": 38,
      "AB": 63,
      "AF": 52,
      "AH": 0,
      "AN": 0,
      "AV": 47,
      "AVS": -70,
      "B1": 60,
      "B2": 110,
      "B3": 130,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 111,
      "F1": 280,
      "F2": 1200,
      "F3": 2150,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 1,
      "lfMode": 1,
    },
    "phoneme": "B_REL",
    "time": 0.481,
    "word": "brown",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 59,
      "AVS": -70,
      "B1": 70,
      "B2": 100,
      "B3": 150,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 110,
      "F1": 310,
      "F2": 1060,
      "F3": 1600,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "R",
    "time": 0.486,
    "word": "brown",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 59,
      "AVS": -70,
      "B1": 70,
      "B2": 117.5,
      "B3": 209.5,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 110.4,
      "F1": 418.5,
      "F2": 1270,
      "F3": 1890.5,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "R",
    "time": 0.5309999999999999,
    "word": "brown",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 64,
      "AVS": -70,
      "B1": 70,
      "B2": 150,
      "B3": 320,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 109,
      "F1": 620,
      "F2": 1660,
      "F3": 2430,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "AE1",
    "time": 0.5609999999999999,
    "word": "brown",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 64,
      "AVS": -70,
      "B1": 91,
      "B2": 136,
      "B3": 257,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 116.02219040801718,
      "F1": 557,
      "F2": 1436,
      "F3": 2363.5,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "AE1",
    "time": 0.6579999999999999,
    "word": "brown",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 62,
      "AVS": -70,
      "B1": 130,
      "B2": 110,
      "B3": 140,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 108.00000000000004,
      "F1": 440,
      "F2": 1020,
      "F3": 2240,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "UH1",
    "time": 0.688,
    "word": "brown",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 62,
      "AVS": -70,
      "B1": 189.5,
      "B2": 106.5,
      "B3": 143.5,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 119.18527042577678,
      "F1": 373.5,
      "F2": 1293,
      "F3": 2366,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "UH1",
    "time": 0.7369999999999999,
    "word": "brown",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 60,
      "AV": 58,
      "AVS": -70,
      "B1": 300,
      "B2": 100,
      "B3": 150,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 107,
      "F1": 250,
      "F2": 1800,
      "F3": 2600,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 270,
      "FNZ": 1700,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "N",
    "time": 0.7669999999999999,
    "word": "brown",
  },
  {
    "params": {
      "A1": 0,
      "A10": 45,
      "A2": 0,
      "A3": 40,
      "A4": 45,
      "A5": 48,
      "A6": 55,
      "A7": 50,
      "A8": 55,
      "A9": 52,
      "AB": 55,
      "AF": 48,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 200,
      "B2": 120,
      "B3": 150,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 340,
      "F2": 1100,
      "F3": 2080,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 1,
      "lfMode": 1,
    },
    "phoneme": "F",
    "time": 0.831,
    "word": "fox",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 64,
      "AVS": -70,
      "B1": 130,
      "B2": 70,
      "B3": 160,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 105.00000000000004,
      "F1": 700,
      "F2": 1220,
      "F3": 2600,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "AA",
    "time": 0.9209999999999999,
    "word": "fox",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 300,
      "B2": 100,
      "B3": 150,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 200,
      "F2": 1500,
      "F3": 2800,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "K_CL",
    "time": 1.0759999999999998,
    "word": "fox",
  },
  {
    "params": {
      "A1": 0,
      "A10": 15,
      "A2": 0,
      "A3": 53,
      "A4": 43,
      "A5": 45,
      "A6": 45,
      "A7": 35,
      "A8": 28,
      "A9": 22,
      "AB": 0,
      "AF": 55,
      "AH": 53,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 250,
      "B2": 160,
      "B3": 330,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 280,
      "F2": 1500,
      "F3": 2850,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 1,
      "lfMode": 1,
    },
    "phoneme": "K_REL",
    "time": 1.126,
    "word": "fox",
  },
  {
    "params": {
      "A1": 0,
      "A10": 15,
      "A2": 0,
      "A3": 53,
      "A4": 43,
      "A5": 45,
      "A6": 45,
      "A7": 35,
      "A8": 28,
      "A9": 22,
      "AB": 0,
      "AF": 0,
      "AH": 53,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 200,
      "B2": 160,
      "B3": 330,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 300,
      "F2": 1990,
      "F3": 2850,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "K_ASP",
    "time": 1.1509999999999998,
    "word": "fox",
  },
  {
    "params": {
      "A1": 0,
      "A10": 30,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 52,
      "A6": 55,
      "A7": 50,
      "A8": 45,
      "A9": 38,
      "AB": 0,
      "AF": 60,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 200,
      "B2": 80,
      "B3": 200,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 320,
      "F2": 1390,
      "F3": 2530,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 1,
      "lfMode": 1,
    },
    "phoneme": "S",
    "time": 1.1989999999999998,
    "word": "fox",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 100,
      "B2": 100,
      "B3": 100,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 500,
      "F2": 1500,
      "F3": 2500,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "SIL",
    "time": 1.299,
    "word": ".",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 100,
      "B2": 100,
      "B3": 100,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 500,
      "F2": 1500,
      "F3": 2500,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "SIL",
    "time": 1.699,
  },
]
`;

exports[`tts-frontend snapshot regression > question intonation: "hello world?" 1`] = `
[
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 100,
      "B2": 100,
      "B3": 100,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 500,
      "F2": 1500,
      "F3": 2500,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "time": 0,
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 40,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 300,
      "B2": 90,
      "B3": 150,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 500,
      "F2": 1500,
      "F3": 2500,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "HH",
    "time": 0,
    "word": "hello",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 57,
      "AVS": -70,
      "B1": 85,
      "B2": 60,
      "B3": 160,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 118,
      "F1": 584,
      "F2": 1344,
      "F3": 2580,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "AH",
    "time": 0.08,
    "word": "hello",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 57,
      "AVS": -70,
      "B1": 72.75,
      "B2": 74,
      "B3": 174,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 130.87272727272727,
      "F1": 488.1,
      "F2": 1247.925,
      "F3": 2587,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "AH",
    "time": 0.1,
    "word": "hello",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 59,
      "AVS": -70,
      "B1": 50,
      "B2": 100,
      "B3": 200,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 116,
      "F1": 310,
      "F2": 1069.5,
      "F3": 2600,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "L",
    "time": 0.124,
    "word": "hello",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 59,
      "AVS": -70,
      "B1": 64,
      "B2": 100,
      "B3": 158,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 116.8955223880597,
      "F1": 411.5,
      "F2": 1041.675,
      "F3": 2589.5,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "L",
    "time": 0.161,
    "word": "hello",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 63,
      "AVS": -70,
      "B1": 90,
      "B2": 100,
      "B3": 80,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 114,
      "F1": 600,
      "F2": 990,
      "F3": 2570,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "AO1",
    "time": 0.191,
    "word": "hello",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 63,
      "AVS": -70,
      "B1": 81.25,
      "B2": 103.5,
      "B3": 101,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 122.32792207792207,
      "F1": 544,
      "F2": 1000.5,
      "F3": 2454.5,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "AO1",
    "time": 0.273,
    "word": "hello",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 62,
      "AVS": -70,
      "B1": 65,
      "B2": 110,
      "B3": 140,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 112,
      "F1": 440,
      "F2": 1020,
      "F3": 2240,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "UH1",
    "time": 0.303,
    "word": "hello",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 62,
      "AVS": -70,
      "B1": 59.75,
      "B2": 99.5,
      "B3": 112,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 123.74825174825175,
      "F1": 387.5,
      "F2": 929,
      "F3": 2208.5,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "UH1",
    "time": 0.351,
    "word": "hello",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 59,
      "AVS": -70,
      "B1": 50,
      "B2": 80,
      "B3": 60,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 110,
      "F1": 290,
      "F2": 760,
      "F3": 2150,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "W",
    "time": 0.381,
    "word": "world",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 59,
      "AVS": -70,
      "B1": 67.5,
      "B2": 80,
      "B3": 91.5,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 110.69767441860465,
      "F1": 353,
      "F2": 914,
      "F3": 2027.5,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "W",
    "time": 0.43699999999999994,
    "word": "world",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 63,
      "AVS": -70,
      "B1": 100,
      "B2": 80,
      "B3": 150,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 108,
      "F1": 470,
      "F2": 1200,
      "F3": 1800,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "ER",
    "time": 0.46699999999999997,
    "word": "world",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 63,
      "AVS": -70,
      "B1": 82.5,
      "B2": 87,
      "B3": 167.5,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 103.21276595744682,
      "F1": 414,
      "F2": 1095,
      "F3": 2010,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "ER",
    "time": 0.625,
    "word": "world",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 59,
      "AVS": -70,
      "B1": 50,
      "B2": 100,
      "B3": 200,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 106,
      "F1": 310,
      "F2": 900,
      "F3": 2400,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "L",
    "time": 0.655,
    "word": "world",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 47,
      "AVS": -70,
      "B1": 300,
      "B2": 100,
      "B3": 170,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 104,
      "F1": 200,
      "F2": 1800,
      "F3": 2700,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "D_CL",
    "time": 0.722,
    "word": "world",
  },
  {
    "params": {
      "A1": 58,
      "A10": 28,
      "A2": 0,
      "A3": 47,
      "A4": 60,
      "A5": 62,
      "A6": 60,
      "A7": 48,
      "A8": 43,
      "A9": 36,
      "AB": 0,
      "AF": 40,
      "AH": 0,
      "AN": 0,
      "AV": 47,
      "AVS": -70,
      "B1": 60,
      "B2": 100,
      "B3": 170,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 170,
      "F1": 280,
      "F2": 1800,
      "F3": 2600,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 1,
      "lfMode": 1,
    },
    "phoneme": "D_REL",
    "time": 0.752,
    "word": "world",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 100,
      "B2": 100,
      "B3": 100,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 500,
      "F2": 1500,
      "F3": 2500,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "SIL",
    "time": 0.762,
    "word": "?",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 100,
      "B2": 100,
      "B3": 100,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 500,
      "F2": 1500,
      "F3": 2500,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "SIL",
    "time": 1.1620000000000001,
  },
]
`;

exports[`tts-frontend snapshot regression > silence only: "." 1`] = `
[
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 100,
      "B2": 100,
      "B3": 100,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 500,
      "F2": 1500,
      "F3": 2500,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "time": 0,
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 100,
      "B2": 100,
      "B3": 100,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 500,
      "F2": 1500,
      "F3": 2500,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "SIL",
    "time": 0,
    "word": ".",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 100,
      "B2": 100,
      "B3": 100,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 500,
      "F2": 1500,
      "F3": 2500,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "SIL",
    "time": 0.4,
  },
]
`;

exports[`tts-frontend snapshot regression > simple word: "hello" 1`] = `
[
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 100,
      "B2": 100,
      "B3": 100,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 500,
      "F2": 1500,
      "F3": 2500,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "time": 0,
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 40,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 300,
      "B2": 90,
      "B3": 150,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 500,
      "F2": 1500,
      "F3": 2500,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "HH",
    "time": 0,
    "word": "hello",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 57,
      "AVS": -70,
      "B1": 85,
      "B2": 60,
      "B3": 160,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 115,
      "F1": 584,
      "F2": 1344,
      "F3": 2580,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "AH",
    "time": 0.08,
    "word": "hello",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 57,
      "AVS": -70,
      "B1": 72.75,
      "B2": 74,
      "B3": 174,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 127.54545454545455,
      "F1": 488.1,
      "F2": 1247.925,
      "F3": 2587,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "AH",
    "time": 0.1,
    "word": "hello",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 59,
      "AVS": -70,
      "B1": 50,
      "B2": 100,
      "B3": 200,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 110,
      "F1": 310,
      "F2": 1069.5,
      "F3": 2600,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "L",
    "time": 0.124,
    "word": "hello",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 59,
      "AVS": -70,
      "B1": 64,
      "B2": 100,
      "B3": 158,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 112.23880597014926,
      "F1": 411.5,
      "F2": 1041.675,
      "F3": 2589.5,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "L",
    "time": 0.161,
    "word": "hello",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 63,
      "AVS": -70,
      "B1": 90,
      "B2": 100,
      "B3": 80,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 105,
      "F1": 600,
      "F2": 990,
      "F3": 2570,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "AO1",
    "time": 0.191,
    "word": "hello",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 63,
      "AVS": -70,
      "B1": 81.25,
      "B2": 103.5,
      "B3": 101,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 112.67045454545453,
      "F1": 544,
      "F2": 1000.5,
      "F3": 2454.5,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "AO1",
    "time": 0.273,
    "word": "hello",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 62,
      "AVS": -70,
      "B1": 65,
      "B2": 110,
      "B3": 140,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 100,
      "F1": 440,
      "F2": 1020,
      "F3": 2240,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "UH1",
    "time": 0.303,
    "word": "hello",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 100,
      "B2": 100,
      "B3": 100,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 500,
      "F2": 1500,
      "F3": 2500,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "SIL",
    "time": 0.498,
  },
]
`;

exports[`tts-frontend snapshot regression > stop closure + release: "pat" 1`] = `
[
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 100,
      "B2": 100,
      "B3": 100,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 500,
      "F2": 1500,
      "F3": 2500,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "time": 0,
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 300,
      "B2": 100,
      "B3": 150,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 200,
      "F2": 1200,
      "F3": 2400,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "P_CL",
    "time": 0,
    "word": "pat",
  },
  {
    "params": {
      "A1": 0,
      "A10": 35,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 40,
      "A8": 45,
      "A9": 42,
      "AB": 63,
      "AF": 55,
      "AH": 52,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 300,
      "B2": 150,
      "B3": 220,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 280,
      "F2": 1200,
      "F3": 2150,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 1,
      "lfMode": 1,
    },
    "phoneme": "P_REL",
    "time": 0.054,
    "word": "pat",
  },
  {
    "params": {
      "A1": 0,
      "A10": 28,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 35,
      "A8": 38,
      "A9": 35,
      "AB": 63,
      "AF": 0,
      "AH": 52,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 200,
      "B2": 150,
      "B3": 220,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 400,
      "F2": 1100,
      "F3": 2150,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "P_ASP",
    "time": 0.059,
    "word": "pat",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 64,
      "AVS": -70,
      "B1": 70,
      "B2": 150,
      "B3": 320,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 110,
      "F1": 620,
      "F2": 1660,
      "F3": 2430,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "AE",
    "time": 0.11199999999999999,
    "word": "pat",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 300,
      "B2": 100,
      "B3": 150,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 200,
      "F2": 1800,
      "F3": 2700,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "T_CL",
    "time": 0.258,
    "word": "pat",
  },
  {
    "params": {
      "A1": 0,
      "A10": 30,
      "A2": 0,
      "A3": 30,
      "A4": 45,
      "A5": 57,
      "A6": 63,
      "A7": 50,
      "A8": 45,
      "A9": 38,
      "AB": 0,
      "AF": 48,
      "AH": 45,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 300,
      "B2": 120,
      "B3": 250,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 280,
      "F2": 1800,
      "F3": 2600,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 1,
      "lfMode": 1,
    },
    "phoneme": "T_REL",
    "time": 0.29100000000000004,
    "word": "pat",
  },
  {
    "params": {
      "A1": 0,
      "A10": 25,
      "A2": 0,
      "A3": 30,
      "A4": 45,
      "A5": 57,
      "A6": 63,
      "A7": 45,
      "A8": 40,
      "A9": 33,
      "AB": 0,
      "AF": 0,
      "AH": 45,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 200,
      "B2": 120,
      "B3": 250,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 400,
      "F2": 1600,
      "F3": 2600,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "T_ASP",
    "time": 0.30600000000000005,
    "word": "pat",
  },
  {
    "params": {
      "A1": 0,
      "A10": 0,
      "A2": 0,
      "A3": 0,
      "A4": 0,
      "A5": 0,
      "A6": 0,
      "A7": 0,
      "A8": 0,
      "A9": 0,
      "AB": 0,
      "AF": 0,
      "AH": 0,
      "AN": 0,
      "AV": 0,
      "AVS": -70,
      "B1": 100,
      "B2": 100,
      "B3": 100,
      "B4": 250,
      "B5": 200,
      "B6": 1000,
      "BGP": 100,
      "BGS": 200,
      "BGZ": 6000,
      "BNP": 100,
      "BNZ": 100,
      "F0": 0,
      "F1": 500,
      "F2": 1500,
      "F3": 2500,
      "F4": 3300,
      "F5": 3750,
      "F6": 4900,
      "FGP": 0,
      "FGZ": 1500,
      "FNP": 250,
      "FNZ": 250,
      "GO": 47,
      "NFC": 5,
      "SW": 0,
      "lfMode": 1,
    },
    "phoneme": "SIL",
    "time": 0.4620000000000001,
  },
]
`;
